fixed css overflowing issue

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 .btn-nav-two {
   background-color: #003087;
+  border: none;
 }
 e .icon-one {
   width: 6em;
